Realign css to correct section, remove extra section

--- a/src/styles/MovieDetails.css
+++ b/src/styles/MovieDetails.css
@@ -1,9 +1,10 @@
-.movie-background {
+.movie-back-drop {
   background-size: cover;
   display: flex;
   flex-direction: row;
   justify-content: center;
   min-height: 75vh;
+  min-width: 100vh;
   padding: 0;
 }
 
@@ -13,7 +14,7 @@
   color: white;
   margin: 2rem 2rem 2rem 2rem;
   padding: 1rem 2rem 1rem 2rem;
-  /* max-width: 50rem; */
+  max-width: 50rem;
 }
 
 .title {
